# spicy

./: .cirrus.yml  .clang-format  .clang-tidy  .clang-tidy.ignore  .clang-tidy.toolchain  .cmake-format.json  .dockerignore  .gitignore  .gitlint  .gitmodules  .lgtm.yml  .paths  .pre-commit-config.yaml  .readthedocs.yaml  .typos.toml  .update-changes.cfg  CHANGES  CMakeLists.txt  CMakePresets.json  CPPLINT.CFG  CPPLINT.cfg  LICENSE  LICENSE.3rdparty  Makefile  NEWS.rst  README.md  README.rst  VERSION  configure  ruff.toml  setup.cfg  vcpkg.json
ci/: Makefile  (+7 more)
ci/fuzz/: CMakeLists.txt  Dockerfile  build.sh  fuzz.cc  run.py
doc/: .gitignore  CHANGES.rst  Doxyfile  Makefile  conf.py  faq.rst  getting-started.rst  host-applications.rst  index.rst  installation.rst  pyproject.toml  release-notes.rst  requirements.txt  toolchain.rst  zeek.rst
doc/_static/: README.t2d  architecture.t2d  record-spicy-batch.zeek  runtime-libraries.t2d  tftp-no-accept.spicy
doc/_templates/: layout.html
doc/autogen/: filter-types.spicy  reserved-keywords.txt  spicy-functions.spicy  spicy-types.spicy  zeek-functions.spicy
doc/autogen/types/: address.rst  barrier.rst  bitfield.rst  bool.rst  bytes-iterator.rst  bytes.rst  enum.rst  error.rst  exception.rst  generic-begin.rst  generic-end.rst  generic-new.rst  generic-pack.rst  generic-unpack.rst  generic.rst  integer.rst  interval.rst  list-iterator.rst  list.rst  map-iterator.rst  map.rst  network.rst  optional.rst  port.rst  real.rst  regexp-match-state.rst  regexp.rst  result.rst  set-iterator.rst  set.rst  sink.rst  stream-iterator.rst  stream-view.rst  stream.rst  string.rst  strong-reference.rst  struct.rst  time.rst  tuple.rst  union.rst  (+5 more)
doc/autogen/zeek/: __preload__.zeek  bare.zeek  tftp-no-accept.spicy  tftp.evt  tftp.spicy  tftp.zeek  zeek-functions.spicy  zeek_tftp.spicy
doc/development/: architecture.rst  ast-notes.txt  benchmarking.rst  coding-style.rst  debugging.rst  doxygen.rst  index.rst  testing.rst
doc/examples/: _skip.spicy  _usage-spicy-build.output  _usage-spicy-config.output  _usage-spicy-driver.output  _usage-spicy-dump.output  _usage-spicyc.output  frontpage.spicy  hello.spicy  my-http-excerpt.h  my-http-host-callback.cc  my-http-host-driver-hlto.cc  my-http-host-driver.cc  my-http-host-parse1.cc  my-http-host-parse2.cc  my-http.cc  my-http.spicy  my_http-excerpt.h  my_http-host-callback.cc  my_http-host-driver-hlto.cc  my_http-host-driver.cc  my_http-host-parse1.cc  my_http-host-parse2.cc  my_http.cc  my_http.spicy
doc/programming/: debugging.rst  examples.rst  extending.rst  guidelines.rst  index.rst  library.rst  parsing.rst
doc/programming/examples/: _anonymous-field.spicy  _anonymous-field.spicy.output  _backtrack.spicy  _basic-unit-module-with-default.spicy  _basic-unit-module-with-default.spicy.output  _basic-unit-module.spicy  _basic-unit-module.spicy.output  _basic-unit-module.spicy.output_2  _basic-unit-parse-byte-order.spicy  _basic-unit-parse-byte-order.spicy.output  _basic-unit-parse.spicy  _basic-unit-parse.spicy.output  _constant-field.spicy  _constant-field.spicy.output_1  _constant-field.spicy.output_2  _context-empty.spicy  _context-empty.spicy.output  _context-pipelining.spicy  _context-pipelining.spicy.output  _debug-hooks.spicy  _debug-hooks.spicy.output  _debug-hooks.spicy.output_1  _empty-context.spicy  _max-size.spicy  _max-size.spicy.output  _mylibrary.spicy.output  _parse-address.spicy  _parse-address.spicy.output  _parse-backtrack.spicy.output  _parse-bitfield-enum.spicy  _parse-bitfield-enum.spicy.output  _parse-bitfield.spicy  _parse-bitfield.spicy.output  _parse-convert-unit.spicy  _parse-convert-unit.spicy.output  _parse-convert.spicy  _parse-convert.spicy.output  _parse-filter.spicy  _parse-filter.spicy.output  _parse-if-block-with-else.spicy  (+61 more)
doc/programming/language/: appendix.rst  conditional.rst  error-handling.rst  fields.rst  functions.rst  identifiers.rst  index.rst  modules.rst  optimization.rst  packing.rst  precedence.rst  statements.rst  types.rst  variables.rst
doc/scripts/: autogen-architecture-diagram  autogen-docs  autogen-spicy-lib  autogen-zeek-docs  spicy-doc-to-rst  spicy-pygments.py  spicy.py
doc/tutorial/: index.rst
doc/tutorial/examples/: _rrq.spicy  _rrq.spicy.output  _rrq.spicy.output_1  _rrq.spicy.output_2  _tftp-1.spicy  _tftp-1.spicy.output  _tftp-2.spicy  _tftp-2.spicy.output  _tftp-3.spicy  _tftp-3.spicy.output  _tftp-3.spicy.output_1  _tftp-3.spicy.output_2  _tftp-4.spicy  _tftp-4.spicy.output  _tftp-complete-1.spicy  _tftp-complete-1.spicy.output  _tftp-enum.spicy  _tftp-enum.spicy.output  _tftp-request-with-accept.spicy  _tftp-unified-request.spicy  _tftp-unified-request.spicy.output  tftp-schedule-analyzer.zeek  tftp.evt  tftp.spicy  tftp.zeek  udp-contents.zeek  wget-log  zeek_tftp.spicy
hilti/: CMakeLists.txt
hilti/include/: config.h.in  global.h  json.h
hilti/lib/: CMakeLists.txt  hilti.hlt
hilti/runtime/: CMakeLists.txt
hilti/src/: asan.cc  config.cc.in  global.cc
hilti/tests/: util.cc  visitor.cc
hilti/toolchain/: CMakeLists.txt
scripts/: CMakeLists.txt  ast-diff  autogen-builder-api  autogen-builder-api.cc  autogen-dispatchers  autogen-docs  autogen-operators  autogen-operators-implementations  autogen-operators-nodes-decl  autogen-type-erased  autogen-version  cxx-installed-dir  expand-old-operators  expand-old-operators.h  find-broken-casts.cc  make-tarball.sh  ninja-build-stats  precompile-headers.sh  run-benchmarks  run-clang-format  run-clang-tidy  store-release-artifacts  update-license-headers  update-visitor-params
spicy/: CMakeLists.txt
spicy/include/: config.h.in  global.h  spicy.h
spicy/lib/: CMakeLists.txt  filter.spicy  spicy-driver-host.cc  spicy.spicy  spicy_rt.hlt
spicy/runtime/: CMakeLists.txt
spicy/src/: config.cc.in
spicy/tests/: grammar.cc
spicy/toolchain/: .clang-tidy  CMakeLists.txt
zeek/: CMakeLists.txt
zeek/compiler/: CMakeLists.txt  README  debug.h  driver.cc  driver.h  glue-compiler.cc  glue-compiler.h
zeek/plugin/: CMakeLists.txt  debug.h
zeek/scripts/: record-spicy-batch.zeek
(+3198 files in other folders)
