# Copyright (c) 2020-now by the Zeek Project. See LICENSE for details.

[project]
name = "spicy-doc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "diagrams==0.25.1",
    "docutils==0.18.1",
    "sphinx==6.2.1",
    "sphinx-autobuild==2025.8.25",
    "sphinx-rtd-theme==1.2.2",
]
